--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 vendor
-tmp
 openvk.yml
 update.pid
 update.pid.old
 Web/static/js/node_modules
+
+tmp/*
+!tmp/.gitkeep
+storage/*
+!storage/.gitkeep
