--- a/Web/di.yml
+++ b/Web/di.yml
@@ -19,6 +19,7 @@ services:
     - openvk\Web\Presenters\SupportPresenter
     - openvk\Web\Presenters\AdminPresenter
     - openvk\Web\Presenters\MessengerPresenter
+    - openvk\Web\Presenters\ThemepacksPresenter
     - openvk\Web\Models\Repositories\Users
     - openvk\Web\Models\Repositories\Posts
     - openvk\Web\Models\Repositories\Photos
