--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,28 @@
 {
+    "repositories": {
+        "cab-archive": {
+            "type": "package",
+            "package": {
+                "name": "wapmorgan-alter/cab-archive",
+                "version": "0.0.7.1",
+                "source": {
+                    "url": "https://github.com/fkwa/CabArchive",
+                    "type": "git",
+                    "reference": "origin/master"
+                }
+            }
+        }
+    },
     "require": {
         "p3k/emoji-detector": "^0.2.1",
         "guzzlehttp/guzzle": "^6.5",
         "komeiji-satori/curl": "dev-master",
-        "wapmorgan/cab-archive": "dev-master",
         "whichbrowser/parser": "dev-master",
         "zadarma/user-api-v1": "dev-master",
         "james-heinrich/getid3": "^1.9@dev",
-        "rybakit/msgpack": "dev-master"
+        "rybakit/msgpack": "dev-master",
+        "wapmorgan-alter/cab-archive": "0.0.7.1",
+        "wapmorgan/binary-stream": "dev-master"
     },
     "minimum-stability": "dev"
 }
