--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -163,6 +163,8 @@ routes:
       handler: "Messenger->app"
     - url: "/im{num}"
       handler: "Messenger->events"
+    - url: "/nim{num}"
+      handler: "Messenger->VKEvents"
     - url: "/im/api/messages{num}/{num}.json"
       handler: "Messenger->apiGetMessages"
     - url: "/im/api/messages{num}/create.json"
@@ -195,6 +197,10 @@ routes:
       handler: "Admin->quickBan"
     - url: "/admin/warn.pl/{num}"
       handler: "Admin->quickWarn"
+    - url: "/method/{text}.{text}"
+      handler: "VKAPI->route"
+    - url: "/token"
+      handler: "VKAPI->tokenLogin"
     - url: "/sandbox_cocksex"
       handler: "About->sandbox"
     - url: "/{?shortCode}"
