Change SMS provider
Co-authored-by: Celestine <34442450+rem-pai@users.noreply.github.com>

--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -45,10 +45,9 @@ openvk:
             fartscroll: false
             testLabel: false
     credentials:
-        zadarma:
+        smsc:
             enable: false
-            callerId: ""
-            key: ""
+            client: ""
             secret: ""
         eventDB:
             enable: false # Better enable this
