--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -173,6 +173,8 @@ routes:
       handler: "Notes->view"
     - url: "/notes/create"
       handler: "Notes->create"
+    - url: "/note{num}_{num}/delete"
+      handler: "Notes->delete"
     - url: "/invite"
       handler: "About->invite"
     - url: "/away.php"
