--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -53,5 +53,5 @@ openvk:
             enable: false # Better enable this
             database:
                 dsn: "mysql:unix_socket=/tmp/mysql.sock;dbname=openvk-eventdb"
-                user: ""
-                password: ""
+                user: "root"
+                password: "DATABASE_PASSWORD"
