--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -48,10 +48,10 @@ openvk:
         smsc:
             enable: false
             client: ""
-            secret: ""
+            secret: "SECRET_KEY_HERE"
         eventDB:
             enable: false # Better enable this
             database:
                 dsn: "mysql:unix_socket=/tmp/mysql.sock;dbname=openvk-eventdb"
-                user: ""
-                password: ""
+                user: "root"
+                password: "DATABASE_PASSWORD"
