--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -217,6 +217,8 @@ routes:
       handler: "VKAPI->tokenLogin"
     - url: "/sandbox_cocksex"
       handler: "About->sandbox"
+    - url: "/internal/wall{num}"
+      handler: "Wall->wallEmbedded"
     - url: "/{?shortCode}"
       handler: "UnknownTextRouteStrategy->delegate"
       placeholders:
