--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -213,6 +213,12 @@ routes:
       handler: "Admin->quickBan"
     - url: "/admin/warn.pl/{num}"
       handler: "Admin->quickWarn"
+    - url: "/admin/reports"
+      handler: "Report->list"
+    - url: "/admin/report{num}"
+      handler: "Report->view"
+    - url: "/admin/reportAction{num}"
+      handler: "Report->action"
     - url: "/method/{text}.{text}"
       handler: "VKAPI->route"
     - url: "/token"
