--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -209,6 +209,10 @@ routes:
       handler: "Admin->clubs"
     - url: "/admin/clubs/id{num}"
       handler: "Admin->club"
+    - url: "/admin/vouchers"
+      handler: "Admin->vouchers"
+    - url: "/admin/vouchers/id{num}"
+      handler: "Admin->voucher"
     - url: "/admin/ban.pl/{num}"
       handler: "Admin->quickBan"
     - url: "/admin/warn.pl/{num}"
