--- a/Web/di.yml
+++ b/Web/di.yml
@@ -33,4 +33,5 @@ services:
     - openvk\Web\Models\Repositories\Notifications
     - openvk\Web\Models\Repositories\TicketComments
     - openvk\Web\Models\Repositories\IPs
+    - openvk\Web\Models\Repositories\Vouchers
     - openvk\Web\Models\Repositories\ContentSearchRepository
