--- a/Web/di.yml
+++ b/Web/di.yml
@@ -17,6 +17,7 @@ services:
     - openvk\Web\Presenters\NotificationPresenter
     - openvk\Web\Presenters\SupportPresenter
     - openvk\Web\Presenters\AdminPresenter
+    - openvk\Web\Presenters\GiftsPresenter
     - openvk\Web\Presenters\MessengerPresenter
     - openvk\Web\Presenters\ThemepacksPresenter
     - openvk\Web\Presenters\VKAPIPresenter
@@ -34,4 +35,5 @@ services:
     - openvk\Web\Models\Repositories\TicketComments
     - openvk\Web\Models\Repositories\IPs
     - openvk\Web\Models\Repositories\Vouchers
+    - openvk\Web\Models\Repositories\Gifts
     - openvk\Web\Models\Repositories\ContentSearchRepository
