--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -199,6 +199,12 @@ routes:
       handler: "About->invite"
     - url: "/away.php"
       handler: "Away->away"
+    - url: "/gift{num}_{num}.png"
+      handler: "Gifts->giftImage"
+    - url: "/gifts{num}"
+      handler: "Gifts->userGifts"
+    - url: "/gifts"
+      handler: "Gifts->stub"
     - url: "/admin"
       handler: "Admin->index"
     - url: "/admin/users"
@@ -213,6 +219,14 @@ routes:
       handler: "Admin->vouchers"
     - url: "/admin/vouchers/id{num}"
       handler: "Admin->voucher"
+    - url: "/admin/gifts"
+      handler: "Admin->giftCategories"
+    - url: "/admin/gifts/id{num}"
+      handler: "Admin->gift"
+    - url: "/admin/gifts/{slug}.{num}.meta"
+      handler: "Admin->giftCategory"
+    - url: "/admin/gifts/{slug}.{num}/"
+      handler: "Admin->gifts"
     - url: "/admin/ban.pl/{num}"
       handler: "Admin->quickBan"
     - url: "/admin/warn.pl/{num}"
