--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -37,6 +37,7 @@ openvk:
                 maxSize: 60000
                 processingLimit: 3000
                 emojiProcessingLimit: 1000
+        commerce: false
         menu:
             links:
                 
