Media: Allow to change the default data deletion policy

--- a/quirks.yml
+++ b/quirks.yml
@@ -12,3 +12,16 @@
 # + Set this option to 1 if you want to use quirky OpenVK behaviour
 # + Set this option to 0 if you want to use the canonical VK behaviour
 profile.rating-bar-behaviour: 0
+
+# Blob deletion behaviour
+# Current VK and old OpenVK don't delete files automatically,
+# thus leaving ability to access user-deleted medias by direct URL.
+# This config option allows to change this.
+# 
+# Possible values:
+# + Set this option to 2 if you want to delete files upon user-initiated deletion
+#  (this option will prohibit restoring any deleted media)
+# + Set this option to 1 if you want to delete files once they're removed from DB completely
+#  (this option most likely won't have any meaningful effect, please use option 2)
+# + Set this option to 0 if you want to use quirky VK and OpenVK behaviour
+blobs.erase-upon-deletion: 0
