Wall: Add attachment type picker

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "locales"]
 	path = locales
 	url = https://github.com/openvk/locales
+[submodule "Web/static/img/oxygen-icons"]
+	path = Web/static/img/oxygen-icons
+	url = https://github.com/KDE/oxygen-icons5.git
