--- a/Web/static/js/package.json
+++ b/Web/static/js/package.json
@@ -1,11 +1,16 @@
 {
   "dependencies": {
     "@atlassian/aui": "^8.5.1",
+    "create-react-class": "^15.7.0",
     "jquery": "^2.1.0",
     "knockout": "^3.5.1",
     "ky": "^0.19.0",
+    "literallycanvas": "^0.5.2",
     "monaco-editor": "^0.20.0",
     "plotly.js-dist": "^1.52.3",
+    "react": "15.1",
+    "react-dom": "15.1",
+    "react-dom-factories": "^1.0.2",
     "requirejs": "^2.3.6",
     "umbrellajs": "^3.1.0"
   }
