Settings: Add configurable shortcode length constraint

--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -10,6 +10,7 @@ openvk:
             disableLargeUploads: false
             mode: "basic"
         shortcodes:
+            minLength: 3 # won't affect existing short urls or the ones set via admin panel
             forbiddenNames:
                 - "index.php"
         security:
