Group [Very WIP]: Add early implementation of group's contacts

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -145,6 +145,10 @@ routes:
       handler: "Group->statistics"
     - url: "/club{num}/followers"
       handler: "Group->followers"
+    - url: "/club{num}/contacts"
+      handler: "Group->contacts"
+    - url: "/club{num}/contacts/action"
+      handler: "Group->actionContact"
     - url: "/club{num}/followers/{num}"
       handler: "Group->admin"
     - url: "/club{num}/setAdmin.jsp"
