--- a/Web/di.yml
+++ b/Web/di.yml
@@ -37,3 +37,4 @@ services:
     - openvk\Web\Models\Repositories\Vouchers
     - openvk\Web\Models\Repositories\Gifts
     - openvk\Web\Models\Repositories\ContentSearchRepository
+    - openvk\Web\Models\Repositories\Contacts
