--- a/Web/static/js/package.json
+++ b/Web/static/js/package.json
@@ -7,11 +7,13 @@
     "ky": "^0.19.0",
     "literallycanvas": "^0.5.2",
     "monaco-editor": "^0.20.0",
+    "msgpack-lite": "^0.1.26",
     "plotly.js-dist": "^1.52.3",
     "react": "15.1",
     "react-dom": "15.1",
     "react-dom-factories": "^1.0.2",
     "requirejs": "^2.3.6",
+    "soundjs": "^1.0.1",
     "umbrellajs": "^3.1.0"
   }
 }
