Pinning groups to the left menu This commit allows you to pin groups to the left menu (max 10 groups, only those in which you are the administrator) from the My Groups page. Fixes #186

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -151,6 +151,8 @@ routes:
       handler: "Group->modifyAdmin"
     - url: "/groups{num}"
       handler: "User->groups"
+    - url: "/groups_pin"
+      handler: "User->pinClub"
     - url: "/groups_create"
       handler: "Group->create"
     - url: "/audios{num}"
