--- a/quirks.yml
+++ b/quirks.yml
@@ -34,3 +34,13 @@ blobs.erase-upon-deletion: 0
 # + Set this option to 1 if you want to use quirky VK Mobile behaviour (yes graffiti in comments)
 # + Set this option to 0 if you want to use VK Desktop behaviour (no graffiti in comments)
 comments.allow-graffiti: 0
+
+# Maximum recursion depth of likes on reposts
+# Restriction on the recursion depth of repost likes.
+# For example, if the value is 5, likes will be set for a maximum of 5 posts, even if there are more posts in the repost hierarchy.
+# Needed to protect against attacks
+# 
+# Possible values:
+# + Set this option to -1 if you want to disable the limit
+# + Set this option to any non-negative number to be this limit
+wall.repost-liking-recursion-limit: 10
