Users: Add two-factor authentication This commit adds full TOTP 2FA. And even backup codes modeled on the original VK

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -51,6 +51,10 @@ routes:
       handler: "Auth->su"
     - url: "/settings"
       handler: "User->settings"
+    - url: "/settings/2fa"
+      handler: "User->twoFactorAuthSettings"
+    - url: "/settings/2fa/disable"
+      handler: "User->disableTwoFactorAuth"
     - url: "/id{num}"
       handler: "User->view"
     - url: "/friends{num}"
