--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "netcarver/textile": "^3.7@dev",
         "al/emoji-detector": "dev-master",
         "ezyang/htmlpurifier": "dev-master",
-        "scssphp/scssphp": "dev-master"
+        "scssphp/scssphp": "dev-master",
+        "lfkeitel/phptotp": "dev-master",
+        "chillerlan/php-qrcode": "dev-main"
     },
     "minimum-stability": "dev"
 }
