New feature: users can rate support answers
Now users can rate support answers. They will see links "This is good answer" and "This is bad answer", like it was in original VK.

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -17,6 +17,10 @@ routes:
       handler: "Support->AnswerTicket"
     - url: "/support/view/{num}"
       handler: "Support->view"
+    - url: "/support/comment/{num}/rateGood"
+      handler: "Support->RateAnswerGood"
+    - url: "/support/comment/{num}/rateBad"
+      handler: "Support->RateAnswerBad"
     - url: "/al_comments.pl/create/support/{num}"
       handler: "Support->makeComment"
     - url: "/al_comments.pl/create/support/reply/{num}"
