Fixes + english localization

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -17,10 +17,8 @@ routes:
       handler: "Support->AnswerTicket"
     - url: "/support/view/{num}"
       handler: "Support->view"
-    - url: "/support/comment/{num}/rateGood"
-      handler: "Support->RateAnswerGood"
-    - url: "/support/comment/{num}/rateBad"
-      handler: "Support->RateAnswerBad"
+    - url: "/support/comment/{num}/rate/{num}"
+      handler: "Support->RateAnswer"
     - url: "/al_comments.pl/create/support/{num}"
       handler: "Support->makeComment"
     - url: "/al_comments.pl/create/support/reply/{num}"
