--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -215,6 +215,12 @@ routes:
       handler: "Gifts->userGifts"
     - url: "/gifts"
       handler: "Gifts->stub"
+    - url: "/pages"
+      handler: "Wiki->edit"
+    - url: "/page{num}_{num}"
+      handler: "Wiki->view"
+    - url: "/page{num}_{num}.textile"
+      handler: "Wiki->source"
     - url: "/admin"
       handler: "Admin->index"
     - url: "/admin/users"
