--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -34,6 +34,7 @@ openvk:
         messages:
             strict: false
         wall:
+            christian: true
             anonymousPosting:
                 enable: false
                 account: 100
