--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -18,7 +18,7 @@ routes:
     - url: "/support/view/{num}"
       handler: "Support->view"
     - url: "/support/comment/{num}/rate/{num}"
-      handler: "Support->RateAnswer"
+      handler: "Support->rateAnswer"
     - url: "/al_comments.pl/create/support/{num}"
       handler: "Support->makeComment"
     - url: "/al_comments.pl/create/support/reply/{num}"
