Groups: Discussions This commit adds discussions (forums) to groups, similar to how it was implemented in the original VK

--- a/Web/di.yml
+++ b/Web/di.yml
@@ -19,6 +19,7 @@ services:
     - openvk\Web\Presenters\AdminPresenter
     - openvk\Web\Presenters\GiftsPresenter
     - openvk\Web\Presenters\MessengerPresenter
+    - openvk\Web\Presenters\TopicsPresenter
     - openvk\Web\Presenters\ThemepacksPresenter
     - openvk\Web\Presenters\VKAPIPresenter
     - openvk\Web\Models\Repositories\Users
@@ -36,4 +37,5 @@ services:
     - openvk\Web\Models\Repositories\IPs
     - openvk\Web\Models\Repositories\Vouchers
     - openvk\Web\Models\Repositories\Gifts
+    - openvk\Web\Models\Repositories\Topics
     - openvk\Web\Models\Repositories\ContentSearchRepository
