--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -163,6 +163,16 @@ routes:
       handler: "User->pinClub"
     - url: "/groups_create"
       handler: "Group->create"
+    - url: "/board{num}"
+      handler: "Topics->board"
+    - url: "/board{num}/create"
+      handler: "Topics->create"
+    - url: "/topic{num}_{num}"
+      handler: "Topics->topic"
+    - url: "/topic{num}_{num}/edit"
+      handler: "Topics->edit"
+    - url: "/topic{num}_{num}/delete"
+      handler: "Topics->delete"
     - url: "/audios{num}"
       handler: "Audios->app"
     - url: "/audios{num}.json"
