Support: Allow users to rate support answers (#342)
* New feature: users can rate support answers

Now users can rate support answers. They will see links "This is good answer" and "This is bad answer", like it was in original VK.

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -17,6 +17,8 @@ routes:
       handler: "Support->AnswerTicket"
     - url: "/support/view/{num}"
       handler: "Support->view"
+    - url: "/support/comment/{num}/rate/{num}"
+      handler: "Support->rateAnswer"
     - url: "/al_comments.pl/create/support/{num}"
       handler: "Support->makeComment"
     - url: "/al_comments.pl/create/support/reply/{num}"
