Groups: Transfer community permissions to another user (#348)
Closes #302

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -75,6 +75,8 @@ routes:
       handler: "Group->attend"
     - url: "/al_comments.pl/create/{text}/{num}"
       handler: "Comment->makeComment"
+    - url: "/groups/{num}/setNewOwner/{num}"
+      handler: "Group->changeOwner"
     - url: "/comment{num}/like"
       handler: "Comment->like"
     - url: "/comment{num}/delete"
