ActivityPub: Very-very early implementation of ActivityPub protocol
Webfinger and host-meta works at least

Related to #61 issue

--- a/Web/di.yml
+++ b/Web/di.yml
@@ -22,6 +22,7 @@ services:
     - openvk\Web\Presenters\TopicsPresenter
     - openvk\Web\Presenters\ThemepacksPresenter
     - openvk\Web\Presenters\VKAPIPresenter
+    - openvk\Web\Presenters\ActivityPubPresenter
     - openvk\Web\Models\Repositories\Users
     - openvk\Web\Models\Repositories\Posts
     - openvk\Web\Models\Repositories\Photos
