Removed unnecessary extensions from the routes
... almost. restore.pl was left temporarily (namely for two days) so that users could safely restore their passwords if they needed to.

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -19,10 +19,12 @@ routes:
       handler: "Support->view"
     - url: "/support/comment/{num}/rate/{num}"
       handler: "Support->rateAnswer"
-    - url: "/al_comments.pl/create/support/{num}"
+    - url: "/al_comments/create/support/{num}"
       handler: "Support->makeComment"
-    - url: "/al_comments.pl/create/support/reply/{num}"
+    - url: "/al_comments/create/support/reply/{num}"
       handler: "Support->AnswerTicketReply"
+    - url: "/al_comments/create/{text}/{num}"
+      handler: "Comment->makeComment"
     - url: "/support/delete/{num}"
       handler: "Support->delete"
     - url: "/language"
@@ -47,6 +49,10 @@ routes:
       handler: "Auth->register"
     - url: "/logout"
       handler: "Auth->logout"
+    - url: "/restore"
+      handler: "Auth->restore"
+    - url: "/restore/internal-finish"
+      handler: "Auth->finishRestoringPassword"
     - url: "/restore.pl"
       handler: "Auth->restore"
     - url: "/restore.pl/internal-finish"
@@ -75,8 +81,6 @@ routes:
       handler: "Group->sub"
     - url: "/setSub/v4/club"
       handler: "Group->attend"
-    - url: "/al_comments.pl/create/{text}/{num}"
-      handler: "Comment->makeComment"
     - url: "/groups/{num}/setNewOwner/{num}"
       handler: "Group->changeOwner"
     - url: "/comment{num}/like"
@@ -123,9 +127,9 @@ routes:
       handler: "Photos->album"
     - url: "/album{num}_{num}/edit"
       handler: "Photos->editAlbum"
-    - url: "/album{num}_{num}/delete.pl"
+    - url: "/album{num}_{num}/delete"
       handler: "Photos->deleteAlbum"
-    - url: "/album{num}_{num}/remove_photo.pl/{num}"
+    - url: "/album{num}_{num}/remove_photo/{num}"
       handler: "Photos->unlinkPhoto"
     - url: "/photos/upload"
       handler: "Photos->uploadPhoto"
@@ -137,7 +141,7 @@ routes:
       handler: "Photos->editPhoto"
     - url: "/photo{num}_{num}/delete"
       handler: "Photos->deletePhoto"
-    - url: "/al_avatars.pl"
+    - url: "/al_avatars"
       handler: "User->setAvatar"
     - url: "/videos{num}"
       handler: "Videos->list"
@@ -161,7 +165,7 @@ routes:
       handler: "Group->followers"
     - url: "/club{num}/followers/{num}"
       handler: "Group->admin"
-    - url: "/club{num}/setAdmin.jsp"
+    - url: "/club{num}/setAdmin"
       handler: "Group->modifyAdmin"
     - url: "/groups{num}"
       handler: "User->groups"
@@ -253,15 +257,15 @@ routes:
       handler: "Admin->giftCategory"
     - url: "/admin/gifts/{slug}.{num}/"
       handler: "Admin->gifts"
-    - url: "/admin/ban.pl/{num}"
+    - url: "/admin/ban/{num}"
       handler: "Admin->quickBan"
-    - url: "/admin/warn.pl/{num}"
+    - url: "/admin/warn/{num}"
       handler: "Admin->quickWarn"
     - url: "/method/{text}.{text}"
       handler: "VKAPI->route"
     - url: "/token"
       handler: "VKAPI->tokenLogin"
-    - url: "/sandbox_cocksex"
+    - url: "/admin/sandbox"
       handler: "About->sandbox"
     - url: "/internal/wall{num}"
       handler: "Wall->wallEmbedded"
