About: Add a page with information about an instance Namely, brief statistics, a list of administrators (the administrator can be hidden from the list using a new right), a list of the 10 most popular groups and rules

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -39,6 +39,8 @@ routes:
       handler: "About->version"
       placeholders:
           productName: "openvk[2]?|libresoc"
+    - url: "/about"
+      handler: "About->aboutInstance"
     - url: "/privacy"
       handler: "About->Privacy"
     - url: "/badbrowser.php"
