Themes: Autodetect Mobile and Desktop platforms
Check out openvk-example.yml to set up default mobile theme (if u have one)

I also changed the function's name and added a 'once' boolean arg which means the theme will be set for only one page

Also closes #402 and #403

--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -59,6 +59,7 @@ openvk:
         bellsAndWhistles:
             fartscroll: false
             testLabel: false
+        defaultMobileTheme: ""
     
     telemetry:
         plausible:
