Global: Add a date adaptation to the user's timezone
Closes #170

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -9,6 +9,8 @@ routes:
       handler: "About->rules"
     - url: "/rpc"
       handler: "InternalAPI->route"
+    - url: "/iapi/timezone"
+      handler: "InternalAPI->timezone"
     - url: "/support"
       handler: "Support->index"
     - url: "/support/tickets"
